# mediamanager

./: Cargo.toml  Dockerfile  README.md
api/: Cargo.toml
api/config/: user.yaml
api/src/: command.rs  config.rs  lib.rs  main.rs  queue.rs  ripper.rs  routes.rs  state.rs
api/src/ripper/: dvd.rs  mock.rs
config/: default.conf  mediamanager.conf
model/: Cargo.toml
model/src/: job.rs  lib.rs  queue.rs
model/tests/: test_queue.rs
scripts/: build.sh  build_makemkv.sh  mediamanager  run.sh
scripts/systemd/: mediamanager@.service
scripts/udev/: 99-mediamanager.rules
