[workspace]
members = [
    "api",
    "model"
]

[workspace.package]
authors = ["franckv <franck.vdl@gmail.com>"]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
mediamanager-model = { path = "model"}
axum = "0.6"
log = "0.4"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
simplelog = "0.12"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
