[workspace]
members = ["api", "model"]
resolver = "2"

[workspace.package]
authors = ["franckv <franck.vdl@gmail.com>"]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
mediamanager-model = { path = "model" }
axum = "0.8"
figment = { version = "0.10", features = ["toml"] }
log = "0.4"
nix = {version = "0.29", features = ["ioctl"] }
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.12"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
