[package]
name = "mediamanager-api"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
mediamanager-model = { workspace = true }
axum = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
simplelog = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
